<resources>
    <string name="app_name">KADE2</string>


    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="vs_text">:</string>

    <string name="borderline">borderline</string>

    <string name="strip">-</string>

    <!--search fragment-->
    <string name="search">Search</string>
    <string name="match_can_t_be_found">Match Can\'t Be Found !!!</string>
    <string name="team_can_t_be_found">Team Can\'t Be Found !!!</string>
    <string name="enter_team_name">Enter Team Name !!</string>


    <string name="football_league_fragment">Football League</string>
    <string name="detail_league_fragment">Detail League</string>
    <string name="next_match_fragment">Next Match</string>
    <string name="last_match_fragment">Last Match</string>
    <string name="detail_match_fragment">Detail Match</string>
    <string name="search_match_fragment">Search Football Match</string>
    <string name="search_team_fragment">Search Football Team</string>
    <string name="league_teams_fragment">League Teams</string>
    <string name="detail_team_fragment">Detail Team</string>
    <string name="favorite_match_fragment">Favorite Match</string>
    <string name="favorite_team_fragment">Favorite Team</string>

    <!--home fragment-->
    <string name="logo_league">logo league</string>
    <string name="home">Home</string>

    <!--favorite fragment-->
    <string name="favorite_match">Match</string>
    <string name="favorite_team">Teams</string>
    <string name="favorites_button">Favorites Button</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>

    <!-- table league fragment -->
    <string name="rank">#</string>
    <string name="table_league">Table League</string>
    <string name="play">P</string>
    <string name="goal_diff">GD</string>
    <string name="point">Point</string>

    <!--teams fragment-->
    <string name="logo_teams">logo teams</string>
    <string name="league_teams">League Teams</string>

    <!--team detail-->
    <string name="year_text">Formed Year :</string>
    <string name="country_text">Country :</string>
    <string name="stadium_text">Stadium :</string>





</resources>
