<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="relawan.kade2.view.home.HomeFragment"
        android:label="@string/football_league_fragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_detailLeagueFragment"
            app:destination="@id/detailLeagueFragment" />
        <action
            android:id="@+id/action_home_to_searchFragment"
            app:destination="@id/searchMatchFragment" />

    </fragment>


    <fragment
        android:id="@+id/detailLeagueFragment"
        android:name="relawan.kade2.view.detail.league.DetailLeagueFragment"
        android:label="@string/detail_league_fragment"
        tools:layout="@layout/fragment_detail_league" >

        <argument
            android:name="league"
            app:argType="relawan.kade2.model.League"/>
        <action
            android:id="@+id/action_detailLeagueFragment_to_nextMatchFragment"
            app:destination="@id/nextMatchFragment" />

        <action
            android:id="@+id/action_detailLeagueFragment_to_lastMatchFragment"
            app:destination="@id/lastMatchFragment" />

        <action
            android:id="@+id/action_detailLeagueFragment_to_teamsFragment"
            app:destination="@id/teamsFragment" />
    </fragment>


    <fragment
        android:id="@+id/nextMatchFragment"
        android:name="relawan.kade2.view.fixture.next.NextMatchFragment"
        android:label="@string/next_match_fragment"
        tools:layout="@layout/fragment_next_match" >
        <argument
            android:name="league"
            app:argType="relawan.kade2.model.League"/>
        <action
            android:id="@+id/action_nextMatchFragment_to_detailMatchFragment"
            app:destination="@id/detailMatchFragment" />
    </fragment>


    <fragment
        android:id="@+id/lastMatchFragment"
        android:name="relawan.kade2.view.fixture.last.LastMatchFragment"
        android:label="@string/last_match_fragment"
        tools:layout="@layout/fragment_last_match" >
        <argument
            android:name="league"
            app:argType="relawan.kade2.model.League"/>
        <action
            android:id="@+id/action_lastMatchFragment_to_detailMatchFragment"
            app:destination="@id/detailMatchFragment" />
    </fragment>


    <fragment
        android:id="@+id/teamsFragment"
        android:name="relawan.kade2.view.fixture.teams.TeamsFragment"
        android:label="@string/league_teams_fragment" >
        <argument
            android:name="league"
            app:argType="relawan.kade2.model.League"/>
        <action
            android:id="@+id/action_teamsFragment_to_detailTeamFragment"
            app:destination="@id/detailTeamFragment" />
        <action
            android:id="@+id/action_teamsFragment_to_searchTeamFragment"
            app:destination="@id/searchTeamFragment" />

    </fragment>


    <fragment
        android:id="@+id/detailTeamFragment"
        android:name="relawan.kade2.view.detail.team.DetailTeamFragment"
        android:label="@string/detail_team_fragment"
        tools:layout="@layout/fragment_detail_team">
        <argument
            android:name="teams"
            app:argType="relawan.kade2.model.Teams"
            app:nullable="true"/>
        <argument
            android:name="search"
            app:argType="relawan.kade2.model.SearchTeam"
            app:nullable="true"/>
    </fragment>

    <fragment
        android:id="@+id/detailMatchFragment"
        android:name="relawan.kade2.view.detail.match.DetailMatchFragment"
        android:label="@string/detail_match_fragment"
        tools:layout="@layout/fragment_detail_match" >
        <argument
            android:name="detail"
            app:argType="relawan.kade2.model.Match"
            app:nullable="true"/>
        <argument
            android:name="search"
            app:argType="relawan.kade2.model.SearchMatch"
            app:nullable="true"/>
    </fragment>


    <fragment
        android:id="@+id/searchMatchFragment"
        android:name="relawan.kade2.view.fixture.search.match.SearchMatchFragment"
        android:label="@string/search_match_fragment" >
        <action
            android:id="@+id/action_searchMatchFragment_to_detailMatchFragment"
            app:destination="@id/detailMatchFragment" />
    </fragment>


    <fragment
        android:id="@+id/searchTeamFragment"
        android:name="relawan.kade2.view.fixture.search.team.SearchTeamFragment"
        android:label="@string/search_team_fragment" >
        <action
            android:id="@+id/action_searchTeamFragment_to_detailTeamFragment"
            app:destination="@id/detailTeamFragment" />
    </fragment>


    <fragment
        android:id="@+id/favoriteMatchFragment"
        android:name="relawan.kade2.view.favorite.match.FavoriteMatchFragment"
        android:label="@string/favorite_match_fragment"
        tools:layout="@layout/fragment_favorite_match" >

        <action
            android:id="@+id/action_favoriteMatchFragment_to_detailMatchFragment"
            app:destination="@id/detailMatchFragment" />
    </fragment>


    <fragment
        android:id="@+id/favoriteTeamFragment"
        android:name="relawan.kade2.view.favorite.team.FavoriteTeamFragment"
        android:label="@string/favorite_team_fragment"
        tools:layout="@layout/fragment_favorite_team" >
        <action
            android:id="@+id/action_favoriteTeamFragment_to_detailTeamFragment"
            app:destination="@id/detailTeamFragment" />
    </fragment>



</navigation>